Overflow scrolling fix for mobile

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ main .wrapper {
 	padding: 10px 0;
 	overflow-x: scroll;
 	white-space: nowrap;
+	-webkit-overflow-scrolling: touch;
 }
 .meta p, .meta h2 {
 	margin-bottom: 5px;
